--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Olivier Wenger Test</title>
+  <title>Olivier Wenger </title>
 
   <!-- Bootstrap core CSS -->
 {#  <link href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">#}
